--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Ecommerce Project</title>
+    <title>GitHub von marsanna: Ecommerce Store</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="E-Commerce Store is a dynamic full-stack demo showcasing a modern product catalog with MongoDB integration and automated PDF document generation. You can find more of my work on GitHub: github.com/marsanna"
+    />
   </head>
   <body>
     <div id="root"></div>
