Contact form added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="E-Commerce Store is a dynamic full-stack demo showcasing a modern product catalog with MongoDB integration and automated PDF document generation. You can find more of my work on GitHub: github.com/marsanna"
     />
+    <script
+      src="https://challenges.cloudflare.com/turnstile/v0/api.js"
+      async
+      defer
+    ></script>
   </head>
   <body>
     <div id="root"></div>
